--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap">
-	<link rel="stylesheet" href="{{ site.baseurl }}/public/css/reset.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/public/css/style.css">
+	<link rel="stylesheet" href="{{ 'public/css/reset.css' | relative_url }}">
+	<link rel="stylesheet" href="{{ 'public/css/style.css' | relative_url }}">
 </head>
