Adding app link.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 	</div>
 	<ul class="menu">
 		<li><a class="sidebar-nav-item{% if page.url == 'index' %} active{% endif %}" href="{{ 'index' | relative_url }}">Home &#8594</a></li>
-		<li><a href="#">Get &#8594</a></li>
+		<li><a href="https://apps.apple.com/ca/app/thermostat-controller/id6502414185">Get &#8594</a></li>
 		{% assign thepages = site.pages %}
 		{% for apage in thepages %}
 			{% if apage.title != null %}
